--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vitejs/plugin-vue": "^1.1.2",
     "@vue/compiler-sfc": "^3.0.5",
     "cross-env": "^7.0.3",
+    "sass": "^1.32.6",
     "vite": "^2.0.0-beta.50",
     "vite-plugin-mock": "^2.0.0-rc.2"
   }
